--- a/server/src/MeDesenvolveIA.IoC/MeDesenvolveIA.IoC.csproj
+++ b/server/src/MeDesenvolveIA.IoC/MeDesenvolveIA.IoC.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.0.0" />
+    <PackageReference Include="Google_GenerativeAI" Version="2.5.10" />
+    <PackageReference Include="Google_GenerativeAI.Web" Version="2.5.10" />
     <PackageReference Include="MediatR" Version="12.5.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
